Can't open roblox
Categories
(Core :: DOM: Navigation, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr60 | --- | unaffected |
firefox64 | --- | unaffected |
firefox65 | --- | unaffected |
firefox66 | --- | verified |
People
(Reporter: aydanoliver, Assigned: baku)
References
(Regressed 1 open bug)
Details
(Keywords: parity-chrome, regression, site-compat)
Attachments
(2 files)
1.09 KB,
patch
|
smaug
:
review+
|
Details | Diff | Splinter Review |
10.32 KB,
patch
|
smaug
:
review+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:66.0) Gecko/20100101 Firefox/66.0 Steps to reproduce: Open the roblox program via clicking play on a game through https://roblox.com (the way you play roblox games is by going to them and clicking play and if you have roblox installed it will open) Actual results: Roblox says it's loading, but never launches. My friend is also using Firefox Nightly and is experiencing the same issue. This started happening about a week ago or so and hasn't fixed, so I am forced to use chrome in order to play roblox. Expected results: Roblox says it's loading, then a moment later, the program launches if you have it installed.
Comment 1•4 years ago
|
||
What's shown in the 'console' and the 'network' tabs of the Web Developer Tools when this happens?
Reporter | ||
Comment 2•4 years ago
|
||
Console: XML Parsing Error: no root element found Location: https://assetgame.roblox.com/game/report-event?name=GameLaunchAttempt_Win32_Protocol Line Number 1, Column 1: report-event:1:1 TypeError: docShell.failedChannel is null NetErrorChild.jsm:728:13 Network: https://prnt.sc/lwowyo.png (In reply to Andre Klapper from comment #1) > What's shown in the 'console' and the 'network' tabs of the Web Developer > Tools when this happens?
Per Comment 2, I'll set this as Core: XML. Please correct if you feel this might be in a better component.
Comment 5•4 years ago
|
||
(In reply to aydanoliver from comment #0) > This started happening about a week ago It would be helpful if you could find the exact regression range. https://mozilla.github.io/mozregression/quickstart.html (I can't do this myself, since testing requires signing up for an account and installing separate software)
Andrei, can your team look for a regression range? Thanks!
Comment 7•4 years ago
|
||
regression-window |
I have managed to reproduce this issue using Firefox 66.0a1 (BuildId:20190122215349) on Windows 10 64bit and macOS 10.13.6.
This seems to be a regression:
Last good revision: 2ee2f297c4106e017231ed67fba4034d766c942b
First bad revision: c4bf214bd2e65e460fcd24a6483635c1d5cb4771
It seems that, on good builds, a prompt was displayed giving the user an option to launch the Roblox application (on affected builds, the prompt is no longer displayed and the game cannot be launched).
The following error pops inside the browser console:
9ef8bbfc2eab421bb393f587d2fff95d.js.gzip:127:210
XML Parsing Error: no root element found
Location: https://assetgame.roblox.com/game/report-event?name=GameLaunchAttempt_Win32
Line Number 1, Column 1: report-event:1:1
XML Parsing Error: no root element found
Location: https://assetgame.roblox.com/game/report-event?name=GameLaunchAttempt_Win32_Protocol
Line Number 1, Column 1: report-event:1:1
TypeError: docShell.failedChannel is null NetErrorChild.jsm:728:13
Hi Andrea! Can you please have a look into this? Thanks!
Assignee | ||
Comment 8•4 years ago
|
||
Can you check if bug 1517368 fixes this issue?
Comment 9•4 years ago
|
||
Unfortunately, Bug 1517368 doesn't seem to fix this issue.
Assignee | ||
Comment 10•4 years ago
|
||
This patch does 2 things in 1 line:
- It doesn't show an error message when the iframe is blocked.
- Because of this, it keeps the same URL loaded in the iframe.
I don't have a nice way to write a test for it.
Assignee | ||
Comment 11•4 years ago
|
||
As discussed on IRC, this patch introduces the concept of 'timing' token for external protocol iframe. At the moment, this token is used just for iframe, and I don't want to generalize it for a bigger scope.
The idea is this:
-
if external protocol iframes are loaded with user-interaction, PopupBlocker uses the user-interaction token as before.
-
if they are loaded without user interaction, if the window is active, PopupBlocker tries to use the timing token: only 1 external protocol iframe is allowed any 20 seconds. (20 secs is by pref).
I expose the timing to chromeUtils for the testing.
Comment 12•4 years ago
|
||
Comment on attachment 9038776 [details] [diff] [review] part 1 - no error shown when blocking Some test?
Comment 13•4 years ago
|
||
Comment on attachment 9038779 [details] [diff] [review] part 2 - timing token >+/* static */ bool PopupBlocker::ShouldExternalProtocolIframeBeAllowed() { Per IRC, call this ConsumeTimerTokenForExternalProtocolIframe >+// Any how many seconds we allow external protocol URLs in iframe when not in >+// single events >+VARCACHE_PREF( >+ "dom.delay.block_external_protocol_in_iframes", >+ dom_delay_block_external_protocol_in_iframes, >+ uint32_t, 20 // in seconds >+) 20s is really long. I'd use something like 5
Comment 14•4 years ago
|
||
Pushed by amarchesini@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/eac3071c276b No error should be returned when external protocol URLs are blocked in iframes, r=smaug https://hg.mozilla.org/integration/mozilla-inbound/rev/910e176da1f9 Timing token to allow external protocol URLs are blocked in iframes without user-interaction, r=smaug
Comment 15•4 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/eac3071c276b
https://hg.mozilla.org/mozilla-central/rev/910e176da1f9
Updated•4 years ago
|
Comment 16•4 years ago
|
||
This issue is verified fixed using Firefox 66.0a1 (BuildId:20190127213438) on Windows 10 64bit and macOS 10.11.6
Updated•4 years ago
|
Updated•4 years ago
|
Comment hidden (spam) |
Comment hidden (spam) |
Comment hidden (spam) |
Comment hidden (spam) |
Comment hidden (spam) |
Comment hidden (spam) |
Comment hidden (spam) |
Description
•