Bug 1514547 - No error should be returned when external protocol URLs are blocked in iframes, r=smaug